fixed footer button mobile style

--- a/css/main.css
+++ b/css/main.css
@@ -824,9 +824,9 @@ p span a:active {
 
   p span a:link {
     display: block;
-    width: 20%;
+    width: 30%;
     margin-top: 3%;
-    margin-left: 38%;
+    margin-left: 33%;
   }
 }
 
